# hotel_reviews_classificator

./: .gitignore  pyproject.toml
src/tripadvisor_dataset/: tripadvisor_dataset_settings.py  tripadvisor_dataset_setup.py
