[project]
name = "hotel-reviews-classificator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "kagglehub>=0.3.13",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
]

[tool.setuptools.packages.find]
where = ["src"]
